02-_CfnTemplate/Flask-APP_01_Network.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Flask-APP_sample Network stack"

Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
    Default: Flask-APP-Product

  VPCRegion:
    Description: VPCRegion
    Type: String
    Default: ap-northeast-1

  VpcCIDR:
    Description: Enter the vpc subnet.
    Type: String
    Default: 10.10.0.0/16

  PublicSubnet1CIDR:
    Description: Enter the PublicSubnet1CIDR
    Type: String
    Default: 10.10.1.0/24

  PublicSubnet2CIDR:
    Description: Enter the PublicSubnet2CIDR
    Type: String
    Default: 10.10.2.0/24

  PrivateSubnet1CIDR:
    Description: Enter the PrivateSubnet1CIDR
    Type: String
    Default: 10.10.11.0/24

  PrivateSubnet2CIDR:
    Description: Enter the PrivateSubnet2CIDR
    Type: String
    Default: 10.10.12.0/24


Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGatewayAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0,!GetAZs '']
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1,!GetAZs '']
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

### NATgateway
  NATGatewayIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: !Ref VPCRegion
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} NATGatewayIP

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt NATGatewayIP.AllocationId
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} NATGateway

  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Flask-App RDS Subnet Group
      DBSubnetGroupName: Flask-App-Network RDS Subnet
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} RDS Subnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttach
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key:  Name
          Value: !Sub ${EnvironmentName} Private Routes (AZ1)

  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref NATGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

### Route 53 Hosted Zone
  APPHostedZone:
    Type: AWS::Route53::HostedZone
    Properties:
      Name: instance.privatelocal
      VPCs:
        - VPCId: !Ref VPC
          VPCRegion: !Ref VPCRegion
      Tags:
        - Key:  Name
          Value: !Sub ${EnvironmentName} APPHostedZone

Outputs:
  VPC:
    Description: Created VPC
    Value: !Ref VPC
    Export:
      Name: Flask-App-Network-Stack-VPC

  VPCRegion:
    Description: Project use Region
    Value: !Ref VPCRegion
    Export:
      Name: Flask-App-Network-Stack-VPCRegion

  PublicSubnets:
    Description: list of the public subnets
    Value: !Join [",",[!Ref PublicSubnet1, !Ref PublicSubnet2]]
    Export:
      Name: Flask-App-Network-Stack-PublicSubnets

  PrivateSubnets:
    Description: list of the private subnets
    Value: !Join [",",[!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
    Export:
      Name: Flask-App-Network-Stack-PrivateSubnets

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1
    Export:
      Name: Flask-App-Network-Stack-PublicSubnet1

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet2
    Export:
      Name: Flask-App-Network-Stack-PublicSubnet2

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet1
    Export:
      Name: Flask-App-Network-Stack-PrivateSubnet1

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet2
    Export:
      Name: Flask-App-Network-Stack-PrivateSubnet2

  RDSSubnetGroup:
    Description: RDS Subnet Group
    Value: !Ref RDSSubnetGroup
    Export:
      Name: Flask-App-Network-Stack-RDSSubnetGroup

  APPHostedZone:
    Description: Private Hosted Zone
    Value: !Ref APPHostedZone
    Export:
      Name: Flask-App-Network-Stack-APPHostedZone
